@@ -8,6 +8,7 @@
 \let\Startpiece=\startpiece
 
 % auxiliary staff
+\def\ccap#1{\pt{#1}\cca{#1}}
 \def\cap#1{\pt{#1}\ca{#1}}
 \def\qap#1{\pt{#1}\qa{#1}}
 \def\hap#1{\pt{#1}\ha{#1}}
