@@ -8,50 +8,58 @@
 
 		protected $notes = array(
 				1  => '\notes',
-				2  => '\Notes',
-				3  => '\Notesp',
-				4  => '\NOtes',
-				6  => '\NOtesp',
-				8  => '\NOTes',
-				12 => '\NOTesp',
-				16 => '\NOTEs',
-				24 => '\NOTEs',
+				2  => '\notes',
+				3  => '\notesp',
+				4  => '\Notes',
+				6  => '\Notesp',
+				8  => '\NOtes',
+				12 => '\NOtesp',
+				16 => '\NOTes',
+				24 => '\NOTesp',
+				32 => '\NOTEs',
+				48 => '\NOTEs',
 			);
 
 		protected $note = array(
-				1  => '\cca',
-				2  => '\ca',
-				3  => '\cap',
-				4  => '\qa',
-				6  => '\qap',
-				8  => '\ha',
-				12 => '\hap',
-				16 => '\wh',
-				24 => '\whp',
+				1  => '\ccca',
+				2  => '\cca',
+				3  => '\ccap',
+				4  => '\ca',
+				6  => '\cap',
+				8  => '\qa',
+				12 => '\qap',
+				16 => '\ha',
+				24 => '\hap',
+				32 => '\wh',
+				48 => '\whp',
 			);
 
 		protected $znote = array(
-				1  => '\zqp',
+				1  => '\zq',
 				2  => '\zq',
 				3  => '\zqp',
 				4  => '\zq',
 				6  => '\zqp',
-				8  => '\zh',
-				12 => '\zhp',
-				16 => '\zwh',
-				24 => '\zwhp',
+				8  => '\zq',
+				12 => '\zqp',
+				16 => '\zh',
+				24 => '\zhp',
+				32 => '\zwh',
+				48 => '\zwhp',
 			);
 
 		protected $pause = array(
-				1  => '\qs',
-				2  => '\ds',
-				3  => '\dsp',
-				4  => '\qp',
-				6  => '\qpp',
-				8  => '\hpause',
-				12 => '\hpausep',
-				16 => '\pause',
-				24 => '\pausep',
+				1  => '\hs',
+				2  => '\qs',
+				3  => '\qsp',
+				4  => '\ds',
+				6  => '\dsp',
+				8  => '\qp',
+				12 => '\qpp',
+				16 => '\hpause',
+				24 => '\hpausep',
+				32 => '\pause',
+				48 => '\pausep',
 			);
 
 
