@@ -8,6 +8,8 @@ New features
 
 - Chord (non-spacing) notes.
 
+- 32nd notes and rests are now supported.
+
 Bugs fixed
 ----------
 
